# Scodok

./: .gitignore  CITATION.cff  Cargo.toml  Package.swift  README.md  build.gradle.kts  package.json  pnpm-lock.yaml  settings.gradle.kts  uniffi.toml
.github/workflows/: release.yml
examples/rust/: Cargo.toml
examples/typescript/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
examples/typescript/src/: cas.ts  profile-picture.ts  user-status.ts
kotlin/: .gitignore  build.gradle.kts
src/: cas.rs  data.rs  error.rs  lib.rs  session.rs  token.rs
src/definitions/: config.rs  first_authentication_data.rs  mod.rs  response.rs  semester.rs  summary.rs  user_status.rs
swift/: scodok.swift
