[package]
name = "scodok"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "scodok"

[features]
ffi = ["uniffi"]

[dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs", features = [ "cli" ], optional = true }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
fetcher = { git = "https://github.com/LiterateInk/Utilities" }
thiserror = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
tsify-next = { git = "https://github.com/siefkenj/tsify" }
wasm = { git = "https://github.com/LiterateInk/Utilities" }
wee_alloc = "0.4"

[build-dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs", features = [ "build" ], optional = true }

[workspace]
resolver = "2"
members = ["examples/rust"]
