[package]
name = "scodok"
version = "0.0.0"
description = "A simple API wrapper for ScoDoc Notes."
repository = "https://github.com/LiterateInk/Scodok"
authors = ["LiterateInk <contact@literate.ink>"]
keywords = ["scodoc", "notes", "grading", "wrapper", "api"]
homepage = "https://docs.literate.ink/scodok"
include = ["**/*.rs", "!src/bin/*.rs", "Cargo.toml"]
license = "GPL-3.0-or-later"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "scodok"

[features]
ffi = ["uniffi"]

[dependencies]
uniffi = { version = "0.28", features = ["cli"], optional = true }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
fetcher = { package = "literateink-fetcher", version = "0.1" }
thiserror = "2"
serde_json = "1.0"
serde_repr = "0.1"
strum_macros = "0.26"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
tsify-next = "0.5"
wasm = { package = "literateink-wasm", version = "0.1" }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"], optional = true }

[workspace]
resolver = "2"
members = ["examples/rust"]
